center h2, make the name blue, make the description red, add margin, padding to the image

--- a/animal-shelter-website.html
+++ b/animal-shelter-website.html
@@ -5,8 +5,10 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Epicodus Animal Shelter</h1>
-    <h2>Animals available to be adopted</h2>
+    <div class="title">
+      <h1>Epicodus Animal Shelter</h1>
+    </div>
+    <h1>Animals available to be adopted</h2>
     <ul>
       <div class="column">
         <li>
