add color id to the description

--- a/animal-shelter-website.html
+++ b/animal-shelter-website.html
@@ -13,7 +13,7 @@
       <div class="column">
         <li>
           A
-          <p>Please adopt me!</p>
+          <p id="blue">Please adopt me!</p>
           <img
             src="https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=1200&height=900&quality=85&auto=format&fit=crop&s=0d3f33fb6aa6e0154b7713a00454c83d"
             alt="a picture of a puppy"
@@ -23,7 +23,7 @@
       <div class="column">
         <li>
           B
-          <p>Please adopt me!</p>
+          <p id="red">Please adopt me!</p>
           <img
             src="https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=1200&height=900&quality=85&auto=format&fit=crop&s=0d3f33fb6aa6e0154b7713a00454c83d"
             alt="a picture of a puppy"
@@ -33,7 +33,7 @@
       <div class="column">
         <li>
           C
-          <p>Please adopt me!</p>
+          <p id="orange">Please adopt me!</p>
           <img
             src="https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=1200&height=900&quality=85&auto=format&fit=crop&s=0d3f33fb6aa6e0154b7713a00454c83d"
             alt="a picture of a puppy"
